# missingTvShows

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  about.html  changes.html  credits.html  downloads.html  genindex.html  index.html  install.html  license.html  objects.inv  pex_26_requirements.txt  pex_private_requirements.txt  pex_public_requirements.txt  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  search.html  searchindex.js  setup.cfg  setup.py  test.py  tox.ini  usage.html
.github/: dependabot.yml
.github/workflows/: master-workflow.yaml  pr-build-workflow-linux.yaml  pr-build-workflow-mac.yaml  pr-build-workflow-windows.yaml  pr-build-workflow.yaml  release-workflow.yaml
Kodi/: __init__.py  missing_tvshows.py
_sources/: about.rst.txt  credits.rst.txt  downloads.rst.txt  index.rst.txt  install.rst.txt
_static/: documentation_options.js
doc/: about.rst  credits.rst  downloads.rst  install.rst  usage.rst
docs/: Makefile  conf.py  index.rst  install.rst  usage.rst
etc/: logging.conf  missingTVShows-completion.bash  tvshows.cfg
scripts/: test.py
src/: logging.conf  missing_tvshows.py  requirements.txt  tvshows.cfg
src/mtvs/: __init__.py  _types.py
src/mtvs/Kodi/: __init__.py  missing_tvshows.py
src/mtvs/Kodi/tests/: dbquery_test.py
src/mtvs/etc/: logging.yaml  tvshows.conf
src/mtvs/main/: __init__.py  __main__.py  main.py  mainImpl.py
src/mtvs/utils/: __init__.py  utilities.py
tests/: dbquery_test.py
